--- a/blocks/table/_theme-dark/table_theme-dark.css
+++ b/blocks/table/_theme-dark/table_theme-dark.css
@@ -1,6 +1,6 @@
 .table_theme-dark {
   position: relative;
-  z-index: 1;
+  z-index: 2;
   width: 1100px;
   margin: 0 auto;
   justify-content: space-between;
